--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -3,6 +3,6 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Show', @company %> |
-	<%= link_to 'Back', companies_path %>
+	<div class="other-button"><%= link_to 'summary', @company %>
+	<%= link_to 'Back', companies_path %></div>
 </div>
