--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -16,14 +16,9 @@
         </tr>
       <% end %>
     </tbody>
-    <tfoot>
-      <tr>
-        <td class="companies-button"><%= link_to '+ Add Company', new_company_path %></td>
-      </tr>
-    </tfoot>
   </table>
 
-  <br>
+  <div class="add-companies-button"><%= link_to '+ Add Company', new_company_path %></div>
 
   
 
