--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -3,5 +3,5 @@
 
 	<%= render 'form' %>
 
-	<div class="grey-button"><%= link_to 'Back', companies_path %></div>
+	<div class="other-button"><%= link_to 'Back', companies_path %></div>
 </div>
