Added detail views for all of the business events. - click on a business event in the business area and you should get a small description appear.

--- a/app/views/companies/_show.html.erb
+++ b/app/views/companies/_show.html.erb
@@ -5,8 +5,10 @@
   	<%= company.company_name%>
 	</p>
 	<ol>
-  	<% company.connections.each do |conn| %>
-  	<li><%= conn.location_one + " to " + conn.location_two %></li>
+	  	<% company.connections.each do |conn| %>
+	  	<li><%= conn.location_one + " to " + conn.location_two %></li>
+  		<li><%= "$ per kg " + conn.weight_cost.to_s %>
+  		<li><%= "$ per cubic metres " + conn.volume_cost.to_s %> 
   	<% end %>
 	</ol>
 	<%= link_to 'Edit', edit_company_path(company) %>
