--- a/app/views/mail/_form.html.erb
+++ b/app/views/mail/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="field">
       <%= f.label :receiver %><br>
-      <%= f.text_field :receiver , required: true%>
+      <%= f.text_field :receiver , required: true, placeholder:'Reciever Name'%>
     </div>
     <div class="field">
       <%= f.label :to %><br>
