--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -17,20 +17,11 @@
       <br/>
       <%= f.text_field :name %>
 
-
-      <div id="starter_connection">
-        <%= f.select(:connection, Connection.all.collect {|a| [a.location_one + " to/from " + a.location_two, a.id ] }, :include_blank => 'Select a starting connection') %>
-      </div>
-
-
       <%= f.fields_for :connections do |builder| %>
         <%= render 'connection_fields', :f => builder %>
       <% end %>
 
-      <div >
-         <p><%= link_to_add_fields "Add Connection", f, :connections %></p>
-      </div>
-
+      <%= link_to_add_fields("Add Connection", f, :connections) %>
       <div class="actions">
         <%= f.submit %>
       </div>
