this won't be pretty and it won't be sweet.

--- a/app/views/business/_tabview.html.erb
+++ b/app/views/business/_tabview.html.erb
@@ -7,7 +7,7 @@
             <li><a id= "select_tab_1" title="">expenditure</a></li>
             <li><a id="select_tab_2" title="">revenue</a></li>
             <li><a id = "select_tab_3" title="">times</a></li>
-            <li><a id = "select_tab_4 title="">routes</a></li>
+            <li><a id = "select_tab_4" title="">routes</a></li>
         </ul>
         <div id="tabs_container">
             <div id="tab1">
