sweet dreams sanity, rest safely in the business area

--- a/app/views/business/_logfile.html.erb
+++ b/app/views/business/_logfile.html.erb
@@ -15,9 +15,9 @@
         <td class="open_event" , id = "<%= event.id %>"><%= event.event_time %></td>
       </tr>
 
-      <tr id = "id<%= event.id %>" , style = "display:none">
-        <td><%= render_event(event) %></td>
-        </tr>
+      <tr class="event-drop-down" id = "id<%= event.id %>" , style = "display:none">
+        <td colspan="2" ><%= render_event(event) %></td>
+      </tr>
     <% end %>
   </tbody>
 </table>
