--- a/app/assets/stylesheets/business.css.scss
+++ b/app/assets/stylesheets/business.css.scss
@@ -22,12 +22,10 @@
 	width: 100%;
 }
 
-.business-tabview {
-	background-color: #CDCDCD;
+.business-divisor td {
+	vertical-align: top;
 }
 
-.business-logview {
-}
 
 .business-logview table {
 	margin: 20px;
@@ -43,7 +41,7 @@
 }
 
 .logview-main-row:hover {
-	background-color: rgba(0, 0, 0, 0.1);
+	background-color: rgba(64, 102, 24, 0.3);
 }
 
 .business-logview .open_event {
@@ -51,4 +49,52 @@
 	border: solid;
 	border-width: 2px 0px 2px 0px;
 	border-color: #CDCDCD;		
+}
+
+.business-logview .event-drop-down {
+	background-color: #EDEDED;
+}
+
+.business-logview .event-drop-down td {
+	padding: 10px 15px 20px 15px;
+}
+
+.business-tabview {
+	vertical-align: top;
+}
+
+.tab-menu ul {
+	background-color: rgba(64, 102, 24, 0.6);
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.tab-menu > ul { 
+	position: relative;
+}
+
+.tab-menu li {
+	display: inline-block;
+	*display: block;
+	vertical-align: middle;
+	position: relative;
+
+}
+
+
+.tab-menu a {
+	display: inline-block;
+	*display: block;
+	color: inherit;
+	line-height: 1.5em;
+	padding: 5px 15px;
+	text-decoration: none;
+	text-transform: uppercase;
+	white-space: nowrap;
+	vertical-align: middle;
+}
+
+.tab-menu a:hover {
+	background-color: rgba(255, 255, 255, 0.2);
 }
