--- a/app/assets/stylesheets/menus/css/menus.css
+++ b/app/assets/stylesheets/menus/css/menus.css
@@ -48,7 +48,7 @@
 
 .pure-menu .pure-menu-can-have-children > li:hover:after {
     color: #fff;
-
+}
 
 /* Focus style for a dropdown menu-item when the parent has been opened */
 .pure-menu .pure-menu-open {
@@ -58,7 +58,7 @@
 
 .pure-menu li a:hover,
 .pure-menu li a:focus {
-    background-color: #1CAD4A;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 /* DISABLED STATES */
