--- a/app/assets/stylesheets/mail.css.scss
+++ b/app/assets/stylesheets/mail.css.scss
@@ -75,3 +75,50 @@
   text-shadow: 1px 1px 0 rgba(255,255,255,1.0);
   border: 1px solid #DEDEDE;
 }
+
+.new-mail-table td {
+	font-weight: 300;
+	font-size: 16px;
+	text-transform: uppercase;
+	vertical-align: middle;
+	text-align: left;
+	width: 10px;
+}
+
+.new-mail-table input[type='text']:focus {
+	background: #dfe9ec;
+  	color: #010101;
+  	font-style: normal;
+  	box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
+  	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
+  	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
+}
+
+.new-mail-table input[type='submit'] {
+	padding: 5px 15px 5px 15px;
+	background-color: rgba(64, 102, 24, 0.8);
+	text-transform: uppercase;
+	color: #fff;
+	font-size: 15px;
+	font-weight: 400;
+	float: right;
+	margin: 10px 0px 0px 0px;
+}
+
+.new-mail-table input[type='submit']:hover {
+  	background-color: rgba(64, 102, 24, 0.6);
+}
+
+.back-button a {
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #000;
+	background-color: #CDCDCD;
+	padding: 5px 15px 5px 15px;
+	font-size: 15px;
+	font-weight: 400;
+}
+
+.back-button a:hover {
+	background-color: #DDDDDD;
+}
