--- a/app/views/mail/_form.html.erb
+++ b/app/views/mail/_form.html.erb
@@ -11,58 +11,75 @@
     </div>
   <% end %>
 
-    <div class="field">
-      <%= f.label :sender %><br>
-      <%= f.text_field :sender , required: true, placeholder:'Senders Name' %>
-    </div>
-    <div class="field">
-      <%= f.label :receiver %><br>
-      <%= f.text_field :receiver , required: true, placeholder:'Reciever Name'%>
-    </div>
-    <div class="field">
-      <%= f.label :to %><br>
-      <%= f.collection_select :to, Location.all, :name, :name, :include_blank => 'Select the start point' , required: true %>
-    </div>
-    <div class="field">
-      <%= f.label :from %><br>
-    <%= f.collection_select :from, Location.all, :name, :name, :include_blank => 'Select the end point' , required: true %>
-  </div>
-    <%= f.label :international, "International" %>
-    <br/>
-    <%= f.check_box :international %>
-    <br />
-  <div class="field">
-    <%= f.label :weight %><br>
-    <%= f.text_field :weight, placeholder:'g' %>
-  </div>
-  <div class="field">
-    <%= f.label :volume %><br>
-    <%= f.text_field :volume, placeholder:'cm³' %>
-  </div>
-  <div class="field">
-   <%= f.label :priority %><br>
-   <%= f.select :priority, [['Air', 1], ['Land', 2]], :include_blank => 'Transport', required: true %>
-  </div>
-  <div class="field">
-    <%= f.label :send_date %><br>
-    <%= f.date_select :send_date, required: true %>
-  </div>
-    <% if !@mail.new_record? %>
-  <div class="field">
-    <%= f.label :receive_date %><br>
-    <%= f.date_select :receive_date , required: true%>
-  </div>
-        <% end %>
-  <div class="field">
-    <%= f.label :max_delivery_time  %><br>
-    <%= f.date_select :max_delivery_time , required: true%>
-  </div>
-  <div class="field">
-    <%= f.label :cost %><br>
-    <%= f.text_field :cost, :readonly => true, placeholder:'NZD' %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-    <!-- create button which will calculate the current expected price -->
-  </div>
+  <table class="new-mail-table" >
+    
+  <tr>
+    <td><%= f.label :sender %></td>
+    <td><%= f.text_field :sender , required: true, placeholder:'Senders Name' %></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :receiver %></td>
+    <td><%= f.text_field :receiver , required: true, placeholder:'Reciever Name'%></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :to %></td>
+    <td><%= f.collection_select :to, Location.all, :name, :name, :include_blank => 'SELECT ORIGIN' , required: true %></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :from %></td>
+    <td><%= f.collection_select :from, Location.all, :name, :name, :include_blank => 'SELECT DESTINATION' , required: true %></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :international, "International" %></td>
+    <td><%= f.check_box :international %></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :weight %></td>
+    <td><%= f.text_field :weight, placeholder:'g' %></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :volume %></td>
+    <td><%= f.text_field :volume, placeholder:'cm³' %></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :priority %></td>
+    <td><%= f.select :priority, [['Air', 1], ['Land', 2]], :include_blank => 'Transport', required: true %></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :send_date %></td>
+    <td><%= f.date_select :send_date, required: true %></td>
+  </tr>
+
+  <% if !@mail.new_record? %>
+      <tr>
+        <td><%= f.label :receive_date %></td>
+        <td><%= f.date_select :receive_date , required: true%></td>
+      </tr>
+
+  <% end %>
+
+  <tr>
+    <td><%= f.label :max_delivery_time  %></td>
+    <td><%= f.date_select :max_delivery_time , required: true%></td>
+  </tr>
+
+  <tr>
+    <td><%= f.label :cost %></td>
+    <td><%= f.text_field :cost, :readonly => true, placeholder:'NZD' %></td>
+  </tr>
+
+  <tr>
+    <td class="back-button" ><%= link_to 'Back', mail_index_path %></td>
+    <td><%= f.submit %></td>
+  </tr>
+
+  </table>
 <% end %>
