--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,13 +8,13 @@
       <div class="content">
         <ul class="list-item">
           <li>
-            <%= f.text_field :email, :class => 'input', :placeholder => 'email'%>
+            <%= f.text_field :email, :class => 'input', :placeholder => 'E-mail'%>
           </li>
           <li>
-            <%= f.password_field :password, :class => 'input', :placeholder => 'password'%>
+            <%= f.password_field :password, :class => 'input', :placeholder => 'Password'%>
           </li>
           <li>
-            <%= f.password_field :password_confirmation, :class => 'input', :placeholder => 'password confirmation'%>
+            <%= f.password_field :password_confirmation, :class => 'input', :placeholder => 'Password Confirmation'%>
           </li>
         </ul>
         <div class = "button-div">
