--- a/app/views/mail/edit.html.erb
+++ b/app/views/mail/edit.html.erb
@@ -1,6 +1,7 @@
+<div class="mail-card">
+
 <h1>Editing mail</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @mail %> |
-<%= link_to 'Back', mail_index_path %>
+</div>
