--- a/app/views/mail/index.html.erb
+++ b/app/views/mail/index.html.erb
@@ -4,6 +4,7 @@
 <table>
   <thead>
     <tr>
+      <th>id</th>
       <th>destination</th>
       <th>origin</th>
       <th>Priority</th>
@@ -15,15 +16,16 @@
 
   <tbody>
     <% @mail.each do |mail| %>
-      <tr>
+      <tr class="list-row" >
+        <td><%= mail.id %></td>
         <td><%= mail.to %></td>
-        <td class="shaded"><%= mail.from %></td>
+        <td><%= mail.from %></td>
         <td><%= mail.priority %></td>
-        <td class="shaded"><%= mail.send_date %></td>
+        <td><%= mail.send_date %></td>
         <td><%= mail.receive_date %></td>
-        <td class="shaded"><%= mail.cost %></td>
+        <td><%= mail.cost %></td>
         <td><%= mail.current_location %></td>
-        <td><%= link_to 'View', mail %>
+        <td class="mail-actions"><%= link_to 'View', mail %>
             <%= link_to 'Edit', edit_mail_path(mail) %>
             <%= link_to 'Delete', mail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -33,6 +35,6 @@
 
 <br>
 
-<%= link_to 'New Mail', new_mail_path %>
+<div class="mail-edit-button"><%= link_to 'New Mail', new_mail_path %></div>
 
 </div>
