--- a/app/views/prices/edit.html.erb
+++ b/app/views/prices/edit.html.erb
@@ -2,6 +2,5 @@
 	<h1>Update Pricing</h1>
 
 	<%= render 'form' %>
-
-	<%= link_to 'Back', prices_path %>
+	<div class="grey-button"><%= link_to 'Back', prices_path %></div>
 </div>
