--- a/app/views/prices/index.html.erb
+++ b/app/views/prices/index.html.erb
@@ -56,6 +56,6 @@
 <% end %>
 <br />
 <!-- If we have a prices model then show edit priciing otherwise show a new price-->
-<%= link_to 'Update Prices', new_or_edit_price_path(@prices) %>
+<div class="green-button" ><%= link_to 'Update Prices', new_or_edit_price_path(@prices) %></div>
 
 </div>
