--- a/app/views/graphs/_expenditure.html.erb
+++ b/app/views/graphs/_expenditure.html.erb
@@ -1,3 +1,3 @@
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
 
-<%= area_chart Mail.group_by_minute(:created_at).count %>
+<%= area_chart get_expenditure %>
