--- a/app/views/companies/_connection_fields.html.erb
+++ b/app/views/companies/_connection_fields.html.erb
@@ -75,7 +75,7 @@
 
   <tr>
     <td><%= f.label :priority, "Priority" %></td>
-    <td><%= f.text_field :priority,required: true, placeholder:'Form of transportation' %></td>
+    <td><%= f.text_field :priority,required: true, placeholder:'Form of Transportation' %></td>
     <td></td>
   </tr>
 
