Added user email to nav bar. Set width on business page for tabs

--- a/app/views/business/index.html.erb
+++ b/app/views/business/index.html.erb
@@ -3,7 +3,7 @@
 
 	<table class="business-divisor" >
 		<tr>
-			<td><%= render 'tabview' %></td>
+			<td width= "45%"><%= render 'tabview' %></td>
 			<td><%= render 'logfile' %></td>
 		</tr>
 	</table>
