--- a/app/assets/stylesheets/menus/css/menus.css.erb
+++ b/app/assets/stylesheets/menus/css/menus.css.erb
@@ -13,7 +13,7 @@
 
 .pure-menu.pure-menu-open,
 .pure-menu.pure-menu-horizontal li .pure-menu-children {
-    background: url("/assets/map-background.jpg"); /* Old browsers */
+    background: url('<%= asset_path("map-background.jpg") %>'); /* Old browsers */
     border: 1px solid #b7b7b7;
     text-transform: uppercase;
 }
