--- a/app/assets/stylesheets/users.css.scss.erb
+++ b/app/assets/stylesheets/users.css.scss.erb
@@ -41,7 +41,7 @@ LOGIN FORM
 .login-form {
   width: 100%;
   position: relative;
-  background-image: url("/assets/map-background.jpg"); /* Old browsers */
+  background: url('<%= asset_path("map-background.jpg") %>'); /* Old browsers */
   background-position: center;
   display: inline-block;
   margin-top: 20%;
