Kg to g changes, placeholder updates

--- a/app/views/companies/_connection_fields.html.erb
+++ b/app/views/companies/_connection_fields.html.erb
@@ -51,7 +51,7 @@
 
   <tr>
     <td><%= f.label :max_weight, "Max Weight" %></td>
-    <td><%= f.text_field :max_weight, required: true, placeholder:'g' %></td>
+    <td><%= f.text_field :max_weight, required: true, placeholder:'grams' %></td>
     <td></td>
   </tr>
 
@@ -82,7 +82,7 @@
   
   <tr>
     <td><%= f.label :day, "Day" %></td>
-    <td><%= f.text_field :day,required: true, placeholder:'First day of departure, of the year' %></td>
+    <td><%= f.text_field :day,required: true, placeholder:'Day of departure' %></td>
     <td></td>
   </tr>
 
