--- a/app/views/companies/_connection_fields.html.erb
+++ b/app/views/companies/_connection_fields.html.erb
@@ -86,18 +86,54 @@
     <td></td>
   </tr>
 
+    <tr>
+    <td><%= f.label :monday, "Monday" %></td>
+    <td><%= f.check_box :monday%></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td><%= f.label :tuesday, "Tuesday" %></td>
+    <td><%= f.check_box :tuesday%></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td><%= f.label :wednesday, "Wednesday" %></td>
+    <td><%= f.check_box :wednesday %></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td><%= f.label :thursday, "Thursday" %></td>
+    <td><%= f.check_box :thursday %></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td><%= f.label :friday, "Friday" %></td>
+    <td><%= f.check_box :friday%></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td><%= f.label :saturday, "Saturday" %></td>
+    <td><%= f.check_box :saturday%></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td><%= f.label :sunday, "Sunday" %></td>
+    <td><%= f.check_box :sunday%></td>
+    <td></td>
+  </tr>
+
   <tr>
     <td><%= f.label :utilised, "Utilised" %></td>
     <td><%= f.check_box :utilised%></td>
     <td></td>
   </tr>
-
+  <% if !f.object.new_record? %>
   <tr>
     <td><%= f.label :_destroy, "Delete" %></td>
     <td><%= f.check_box :_destroy %></td>
     <td></td>
   </tr>
-
+<% end %>
 </table>
 
 </fieldset>
