--- a/app/views/mail/_form.html.erb
+++ b/app/views/mail/_form.html.erb
@@ -50,7 +50,7 @@
 
   <tr>
     <td><%= f.label :priority %></td>
-    <td><%= f.select :priority, [['Air', 1], ['Land', 2]], :include_blank => 'SELECT TRANSPORT', required: true %></td>
+    <td><%= f.select :priority, [['Air', 'Air'], ['Land', 'Land']], :include_blank => 'SELECT TRANSPORT', required: true %></td>
   </tr>
 
   <tr>
