simple route additions

--- a/app/views/prices/index.html.erb
+++ b/app/views/prices/index.html.erb
@@ -6,7 +6,7 @@
   <table>
      <th>International</th>
      <th></th>
-     <th width="40px"></th>
+     <th width="20px"></th>
      <th>Domestic</th>
 
      <tr class="pricing-desc">
@@ -33,7 +33,7 @@
 
     <tr class="pricing-desc">
        <td>Weight Cost</td>
-       <td>$ Per Gram</td>
+       <td>$ Per Kilogram</td>
      </tr>
 
     <tr>
