--- a/app/views/routes/edit.html.erb
+++ b/app/views/routes/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing route</h1>
+<div class="routes-card">
+
+<h1>Edit route</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @route %> |
 <%= link_to 'Back', routes_path %>
+</div>
