--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing routes</h1>
+<div class="routes-card" >
+
+<h1>current routes</h1>
 
 <table>
   <thead>
@@ -23,3 +25,5 @@
 <br>
 
 <%= link_to 'New Route', new_route_path %>
+
+</div>
