--- a/app/assets/stylesheets/mail.css.scss
+++ b/app/assets/stylesheets/mail.css.scss
@@ -169,3 +169,24 @@
 	font-size: 15px;
 	font-weight: 400;
 }
+
+.partial-mail {
+	vertical-align: middle;
+	padding: 10px;
+}
+
+.partial-mail table {
+	margin: 10px;
+	padding: 10px;
+
+}
+
+.partial-mail tr {
+	vertical-align: middle;
+	padding: 0px 5px 5px 10px;
+}
+
+.mail-bold {
+	font-weight: 400;
+	text-transform: uppercase;
+}
