--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 <div  id="top-menu">
   <div id="header" class="pure-menu pure-menu-open pure-menu-horizontal">
-    <%= link_to 'Kelburn Postal Service', homepage_path, class: "pure-menu-heading" %>
+    <%= link_to 'KPSmart', homepage_path, class: "pure-menu-heading" %>
     <ul >
       <li>
         <%= link_to 'Mail', mail_page_path %>
