--- a/app/views/location/_show.html.erb
+++ b/app/views/location/_show.html.erb
@@ -1,7 +1,7 @@
 <div>
 	<% location = Location.find(id) %>
 	<p>
-  	<strong>Location name:</strong>
+  	<strong>LOCATION NAME</strong>
   	<%= location.name%>
 	</p>
 	
