--- a/app/assets/stylesheets/routes.css.scss
+++ b/app/assets/stylesheets/routes.css.scss
@@ -27,3 +27,9 @@
 	margin: 0px 10px 0px 0px;
 	padding: 10px 5px 10px 5px;
 }
+
+.routes-card th {
+	text-transform: uppercase;
+	font-weight: 400;
+	padding: 5px 0px 15px 0px;
+}
