--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -1,5 +1,5 @@
 <div class="routes-card" >
-
+<%= javascript_include_tag :defaults %>
 <h1>current routes</h1>
 
 <table>
@@ -13,6 +13,11 @@
 
   <tbody>
     <% @routes.each do |route| %>
+      <tr>
+        <td>
+         <%= route.name %>
+        </td>
+      <tr>
       <tr>
         <td><%= link_to 'Show', route %></td>
         <td><%= link_to 'Edit', edit_route_path(route) %></td>
