--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
-
+<%= @route.name %>
 <%= link_to 'Edit', edit_route_path(@route) %> |
 <%= link_to 'Back', routes_path %>
